test/functions/bradc/retConstness/modifyReturnedInt.good
modifyReturnedInt.chpl:16: error: illegal lvalue in assignment
